[metadata]
name = chapterup
version = attr: chapterup.__version__
description = A tool to automatically upload folders of images to imgur in proper order.
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux

[options]
install_requires =
    docopt-ng
    imgur_python
    natsort
    tqdm
    xdg
    python_version >= "3.10"
packages=find:

[options.package_data]
* =
  *.svg
  *.css
  *.tex
  *.png

[options.packages.find]
exclude=tests*

[options.entry_points]
console_scripts =
    slime_builder = slime_builder.main:main
